change mythcamera to singleton,fix makefile bug. new define for osx

--- a/CameraClient/Makefile
+++ b/CameraClient/Makefile
@@ -1,6 +1,6 @@
 CXX=g++
 CC=gcc
-CPPFLAGS=-fpermissive -Wdeprecated-declarations -Wall -O3
+CPPFLAGS=-fpermissive -Wdeprecated-declarations -Wall -O3 -I/usr/local/include
 CPPSOURCES=$(wildcard *.cpp)
 CPPOBJECTS=$(CPPSOURCES:.cpp=.o)
 CSOURCES=$(wildcard *.c)
@@ -18,7 +18,9 @@ all: .dcpp .dc $(CPPSOURCES) $(CSOURCES) $(TARGET)
 -include .dcpp
 -include .dc
 $(TARGET): $(CPPOBJECTS) $(COBJECTS)
-	$(CXX) $(CPPOBJECTS) $(COBJECTS) -o $@ -L/usr/local/lib -lSDL2 -lavcodec -lavfilter -lavutil -lswresample -lswscale -lavdevice -lavformat -lpostproc -lopencv_core -lopencv_highgui -lopencv_imgproc
+	$(CXX) $(CPPOBJECTS) $(COBJECTS) -o $@ -L/usr/local/lib -lSDL2 -lavcodec -lavfilter -lavutil -lswresample -lswscale -lavdevice -lavformat -lpostproc -lopencv_core -lopencv_highgui -lopencv_imgproc -lSDL2_net
 
 clean:
 	rm $(CPPOBJECTS) $(COBJECTS) .dcpp .dc
+install:
+	sudo cp $(TARGET) /usr/local/bin
